#        - Copy, Paste, Copy and Paste, Select All  and Copy All Menus works
#        - Copy address ready
#        - Added menu with servers list
#        - Ctrl+Q terminate application
#        - Ctrl+N create a new local terminal
#        - Hor. and Ver. Notebook split
#        - Added tooltip to tabs when a user,ip, and port exist
#        - Rusian lang fix from alternate fork 
#
# v1.3.0 - Python 3 code and GTK3 quick rewrite, fix bugs and fist run.
#        - code rewrite to migrate from python2 to python3 ans PyGObject gi
#
# v1.1.0 - Bugfix: public key field was not saved (thanks to Benoît Georgelin for reporting the bug)
#        - Bugfix: bug in AES library resulted in blank passwords randomly being replaced by some characters (thanks to Boyan Peychev for reporting the bug)
#        - Bugfix: drag and release tab on the same notebook caused tab to be closed
#        - Bugfix: Estado de nodos expandidos/contraidos se revertia a un estado anterior al editar por segunda vez un host
#        - Bugfix: Cluster window had to be resized to show the text area in some setups
#        - Bugfix: Blank lines in commands were removed when restarting application (thanks to Nicholas O'Neill for reporting the bug)
#        - Se agrega traducción a koreano (thanks to Jong Hoon Lee)
#        - Better indentation in server panel
#        - Disabled the horizontal scroll bar in the console        
#        - Added option to open local console on application startup (thanks to Boaman Surebun for the implementation)
#        - Se agrega opción para copiar todo el buffer al porta-papeles
#        - Se usa la consola por defecto del usuario en vez de bash
#        - Se exponen algunos shortcuts
#
# v1.0.0 - Bugfix: last group was collapsed when adding/editing a new host. All collapsed nodes are preserved now. (thanks to Kevin Brennan for reporting the bug)